--- a/style.css
+++ b/style.css
@@ -20,15 +20,15 @@ body {
 
 .quiz-card {
 width: 30rem;
-
 }
-.quizAnswerCard {
 
-
-}
+.bg-success, .bg-danger {
+    color: white !important;
+   }
 
 .quizAnswerCard:hover {
 cursor: pointer;
 background-color: rgba(0,0,0,0.05);
-
 }
+
+
