--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-top: 16px;
 }
 
 
@@ -29,6 +30,14 @@ width: 30rem;
 .quizAnswerCard:hover {
 cursor: pointer;
 background-color: rgba(0,0,0,0.05);
+}
+
+.width-100{
+    width: 100%;
+ 
+}
+.center{
+    text-align: center;
 }
 
 
