--- a/style.css
+++ b/style.css
@@ -40,4 +40,22 @@ background-color: rgba(0,0,0,0.05);
     text-align: center;
 }
 
+.font-38{
+    font-size: 38px;
+    margin-bottom: 38px;
+}
+
+.progress{
+    margin-top: 16px;
+}
+
+.button-row{
+display: flex;
+justify-content: center;
+margin-top: 24px;
+
+
+}
+
+
 
